objects/PC_ProgramRegionUserMapping__c.object
<CustomObject>
    <description>Program Region User Mapping is a junction object to associate an engagement program to a user and a region.</description>
    <fields>
        <fullName>PC_CareTeamAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Care Team Account associated to the region.</description>
        <label>Care Team Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Region User Mappings</relationshipLabel>
        <relationshipName>ProgramRegionUserMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_CareTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Care Team member associated to the region.</description>
        <label>Care Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProgramRegionUserMappingsCareTeam</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_CareTeamRole__c</fullName>
        <description>Name of the Care Team role associated to the region.</description>
        <label>Care Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCO</fullName>
                </value>
                <value>
                    <fullName>Treating Physician</fullName>
                </value>
                <value>
                    <fullName>Care Coordinator</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Specialist</fullName>
                </value>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
                <value>
                    <fullName>Field Reimbursement Manager</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Clinical Educator</fullName>
                </value>
                <value>
                    <fullName>Care Giver</fullName>
                    <isActive>false</isActive>
                    <label>Care Giver</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_EndDateTime__c</fullName>
        <description>Date when the association of a specific user with a region ends.</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_EndDate__c</fullName>
        <description>Date when the association of a specific user with a region ends.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_EngagementProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the engagement program associated to the region.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Program Region User Mappings</relationshipLabel>
        <relationshipName>ProgRegionUserMapEngagementProg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Ordinal__c</fullName>
        <description>This fields holds the sequential order of Program Region User Mapping records for unique Region, Role and Engagement Program records</description>
        <label>Ordinal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_QueueOrGroupName__c</fullName>
        <description>Contains the Name of the User Queue or Group of the Association. Leave it blank, if the PC_RoleType is blank.</description>
        <inlineHelpText>Contains the Name of the User Queue or Group of the Association. Leave it blank, if the PC_RoleType is blank.</inlineHelpText>
        <label>User Queue/Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the region.</description>
        <label>Region</label>
        <referenceTo>PC_Region__c</referenceTo>
        <relationshipLabel>Program Region User Mappings</relationshipLabel>
        <relationshipName>ProgramRegionUserMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_RoleType__c</fullName>
        <description>Indicates if the role type is User Queue or Group.
Blank value signifies anything other than Queue or Group.</description>
        <inlineHelpText>Indicates if the role type is User Queue or Group.
Blank value signifies anything other than Queue or Group.</inlineHelpText>
        <label>Role Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_StartDateTime__c</fullName>
        <description>Start date when a specific user is associated with a region.</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_StartDate__c</fullName>
        <description>Start date  when a specific user is associated with a region.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Program Region User Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Region__c</columns>
        <columns>PC_CareTeamMember__c</columns>
        <columns>PC_CareTeamRole__c</columns>
        <columns>PC_EngagementProgram__c</columns>
        <columns>PC_StartDateTime__c</columns>
        <columns>PC_EndDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTUM{0}</displayFormat>
        <label>Program Region User Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Region User Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>PC_Care_Team_Account_Check</fullName>
        <active>true</active>
        <description>This rule is to make sure that &apos;Care Team Member&apos; is selected for roles &apos;Care Coordinator&apos; and &apos;Reimbursement Specialist&apos;</description>
        <errorConditionFormula>AND((ISPICKVAL(PC_CareTeamRole__c, &apos;HCO&apos; ) || ISPICKVAL(PC_CareTeamRole__c, &apos;Treating Physician&apos;) ),( ISBLANK( PC_CareTeamAccount__c ) &amp;&amp; NOT(ISBLANK( PC_CareTeamMember__c ))))</errorConditionFormula>
        <errorMessage>Please add value in &apos;Care Team Account&apos; if &apos;Care Team Role&apos; is selected as &apos;Treating Physician&apos; or &apos;HCO&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_Care_Team_Role_Check</fullName>
        <active>true</active>
        <description>This rule is to make sure that &apos;Care Team Account&apos; is selected for roles &apos;HCO&apos; and &apos;Treating Physician&apos;</description>
        <errorConditionFormula>AND((ISPICKVAL(PC_CareTeamRole__c, &apos;Care Coordinator&apos; ) || ISPICKVAL(PC_CareTeamRole__c, &apos;Reimbursement Specialist&apos;) ),( ISBLANK( PC_CareTeamMember__c ) &amp;&amp; NOT(ISBLANK( PC_CareTeamAccount__c ))))</errorConditionFormula>
        <errorMessage>Please add value in &apos;Care Team Member&apos; if &apos;Care Team Role&apos; is selected as &apos;Care Coordinator&apos; or &apos;Reimbursement Specialist&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_HCO_RoleAndAccount_Combination</fullName>
        <active>true</active>
        <description>This rule will make sure that &apos;Care Team Account&apos; of type &apos;HCO&apos; is selected for &apos;Care Team Role&apos; of value &apos;HCO&apos;</description>
        <errorConditionFormula>(PC_CareTeamAccount__r.RecordType.DeveloperName != &apos;HCO&apos; &amp;&amp; PC_CareTeamAccount__c!= null &amp;&amp; Text(PC_CareTeamRole__c) == &apos;HCO&apos;)</errorConditionFormula>
        <errorMessage>Please select &apos;Care Team Account&apos; of type &apos;HCO&apos; for the selected &apos;Care Team Role&apos; HCO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_Physician_RoleAndAccount_Combination</fullName>
        <active>true</active>
        <description>This rule will make sure that &apos;Care Team Account&apos; of type &apos;Physician&apos; is selected for &apos;Care Team Role&apos; of value &apos;Treating Physician&apos;</description>
        <errorConditionFormula>( PC_CareTeamAccount__r.RecordType.DeveloperName != &apos;PC_Physician&apos; &amp;&amp; PC_CareTeamAccount__c!= null &amp;&amp; Text(PC_CareTeamRole__c) == &apos;Treating Physician&apos;)</errorConditionFormula>
        <errorMessage>Please select &apos;Care Team Account&apos; of type &apos;Physician&apos; for the selected &apos;Care Team Role&apos; Treating Physician</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_and_Account_values_check</fullName>
        <active>true</active>
        <description>This rule will ensure to have value only in one of &apos;Care Team Account&apos; and &apos;Care Team User&apos;.</description>
        <errorConditionFormula>OR(AND(ISBLANK( PC_CareTeamAccount__c ), ISBLANK(  PC_CareTeamMember__c ) ),
AND( NOT(ISBLANK( PC_CareTeamAccount__c )), NOT(ISBLANK( PC_CareTeamMember__c ) ) ))</errorConditionFormula>
        <errorMessage>Please enter only one of &apos;Care Team Account&apos; and &apos;Care Team User&apos;.</errorMessage>
    </validationRules>
</CustomObject>